Only allow specifying ZoneApi to UpgradePolicy, but convert to ZoneId internally